--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage" : "https://ianclima.github.io/react-portfolio/",
   "name": "react-portfolio",
   "private": true,
   "version": "0.0.0",
